--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,7 +9,7 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\Participant
-                property: mail
+                property:
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
