--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,7 +9,7 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\Participant
-                property:
+                # property: mail
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -21,10 +21,12 @@ security:
             guard:
                 authenticators:
                     - App\Security\AppLoginAuthenticator
+
+            form_login:
+
             logout:
                 path: app_logout
-                # where to redirect after logout
-                # target: app_any_route
+                target: app_login
 
             remember_me:
                 secret: '%kernel.secret%'
